created the help label

--- a/Dictionary/Base.lproj/Main.storyboard
+++ b/Dictionary/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9bz-Ab-NIc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="778" y="72"/>
+            <point key="canvasLocation" x="776.79999999999995" y="71.514242878560722"/>
         </scene>
     </scenes>
 </document>
