--- a/Dictionary/Base.lproj/Main.storyboard
+++ b/Dictionary/Base.lproj/Main.storyboard
@@ -120,6 +120,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="i8M-QC-So3" id="b2C-hT-boj"/>
+                        <outlet property="titleLabel" destination="QNM-y4-zad" id="gVZ-NM-dFH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oWv-2p-NST" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
