--- a/Dictionary/Base.lproj/LaunchScreen.storyboard
+++ b/Dictionary/Base.lproj/LaunchScreen.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="sUS-sX-agu">
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="sUS-sX-agu">
                                 <rect key="frame" x="142" y="278" width="90" height="110"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="110" id="SUp-qT-RD4"/>
